syntax = "proto3";

option java_multiple_files = true;
option java_package = "servicestubs";

package grpcservice; // package do proto

// Service contract operations 
service Service {
  rpc submitFile(InputFile) returns (TextMessage);
  rpc getImageLabels(TextMessage) returns (FileLabels);
  rpc getNamesFromDateAndLabel(DatesAndLabel) returns (FileNames);
  rpc downloadFile(TextMessage) returns (DownloadedFile);
}

message TextMessage {string txt = 1;}

message InputFile {
  string contentType = 1;
  bytes file = 2;
  string fileName = 3;
}

message FileLabels {
  repeated string labels = 1;
}

message FileNames {
  repeated string names = 1;
}

message DatesAndLabel {
  string initDate = 1;
  string finalDate = 2;
  string label = 3;
}

message DownloadedFile {
  bytes file = 1;
}